# lec-sim

./: .gitignore  README.md  pyproject.toml
config/: teams.yaml  tournament.yaml
data/: current_state.json
src/lec_sim/: __init__.py  cli.py
src/lec_sim/io/: __init__.py  results.py  state_loader.py
src/lec_sim/models/: __init__.py  match.py  standing.py  team.py
src/lec_sim/simulation/: __init__.py  engine.py  win_rates.py
src/lec_sim/tiebreaker/: __init__.py  resolver.py
src/lec_sim/tournament/: __init__.py  playoffs.py  round_robin.py  tournament.py
